--- a/index.html
+++ b/index.html
@@ -1,2 +1,264 @@
-<p>Hello, World!<br>
-This is a test.</p>
+<!DOCTYPE html>
+<html lang="ja">
+
+<head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# article: http://ogp.me/ns/article#">
+    <meta charset="utf-8">
+    <title>早稲田祭運営スタッフ</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="design/stylesheets/html5reset.css" type="text/css">
+    <link rel="stylesheet" href="design/stylesheets/design.css" type="text/css">
+    <link rel="stylesheet" href="design/scripts/meanmenu.css" type="text/css">
+    <link rel="stylesheet" href="design/scripts/clingify.css" type="text/css">
+    <link rel="icon" type="image/png" href="design/images/favicon.png">
+    <meta property="og:title" content="早稲田祭運営スタッフ">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://wasedasai.org/">
+    <meta property="og:image" content="https://wasedasai.org/design/images/fbogp.png">
+    <meta property="og:site_name" content="早稲田祭運営スタッフ">
+    <meta property="og:description" content="日本最大級の学園祭・早稲田祭を運営している早稲田祭運営スタッフ（運スタ）の公式サイトです。">
+    <meta property="fb:app_id" content="appid">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="@wasedasai">
+    <!-- Since 2017/12/07  -->
+    <meta name="description" content="日本最大級の学園祭・早稲田祭を運営している早稲田祭運営スタッフ（運スタ）の公式サイトです。">
+    <meta name="keywords" content="早稲田祭,運営スタッフ,運スタ,早稲田祭運営スタッフ,学園祭,委員,実行委員,早稲田">
+    <meta name="theme-color" content="#c1272d">
+</head>
+
+<body>
+    <header id="header" class="header">
+        <h1>
+            <a href="index.html">
+                <img src="design/images/pic0.png" alt="早稲田祭2017 オープンキャンパス">
+            </a>
+        </h1>
+        <div class="sbtn">
+            <ul>
+                <li>
+                    <a href="https://twitter.com/wasedasai">
+                        <img src="design/images/social/twitter.png" height="32" width="32">
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.facebook.com/Wasedasai">
+                        <img src="design/images/social/facebook.png" height="32" width="32">
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.youtube.com/WasedasaiOfficial">
+                        <img src="design/images/social/youtube.png" height="32" width="32">
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </header>
+    <nav class="nav">
+        <ul>
+            <li>
+                <a href="#greeting">ごあいさつ</a>
+            </li>
+            <li>
+                <a href="#about">概要</a>
+            </li>
+            <li>
+                <a href="events.html">企画紹介</a>
+            </li>
+            <li>
+                <a href="staffs.html">スタッフ紹介</a>
+            </li>
+            <li>
+                <a href="#access">アクセス</a>
+            </li>
+            <li class="spsbtn">
+                <a href="https://twitter.com/wasedasai">
+                    <img src="design/images/social/twitter.png" height="24" width="24">
+                </a>
+            </li>
+            <li class="spsbtn">
+                <a href="https://www.facebook.com/Wasedasai">
+                    <img src="design/images/social/facebook.png" height="24" width="24">
+                </a>
+            </li>
+            <li class="spsbtn">
+                <a href="https://www.youtube.com/WasedasaiOfficial">
+                    <img src="design/images/social/youtube.png" height="24" width="24">
+                </a>
+            </li>
+        </ul>
+    </nav>
+    <div id="content">
+        <div class="box clearfix">
+            <div class="ctcontent">
+                <h2 id="greeting">
+                    <span>ごあいさつ</span>
+                </h2>
+                <p class="text">
+                    早稲田祭2017 オープンキャンパス特設サイトをご覧いただき誠にありがとうございます。
+                    <br>
+                    <br> このたび私たち早稲田祭2017運営スタッフは、8月5日(土)、6日(日)に開催される早稲田大学のオープンキャンパスにおきまして、主に受験生の方を対象としたイベントを開催いたします。現役早大生による受験相談ブースや、大学の情報が詰まったフリーペーパーの配布など盛りだくさんの内容となっております。オープンキャンパスにお越しの際は、ぜひ早稲田キャンパス
+                    10号館（アクセス参照）にお立ち寄りください。
+                    <br>
+                    <br> このサイトをご覧になっている方は、早稲田大学に少なからず興味をお持ちのことと思います。そんなあなたはご存知ですか。早稲田大学には、早稲田が一丸となる、1年にたった2日しかない祭があることを。
+                    <br>
+                    <br> それが、早稲田祭です。
+                    <br> 早稲田祭はサークル、勉学、趣味……さまざまな発表が「早稲田」という共通項の下、一堂に会する場です。私たち早大生が、この限られた学生生活で何をしているのか、一番よく知ることのできる場所だと確信しています。
+                    <br>
+                    <br> オープンキャンパスだけではきっと早稲田を知ることはできません。私たち早稲田祭2017運営スタッフが創りあげる、一瞬に華ひらく早大生の祭にぜひいらしてください。 きたる11月、紺碧の空の下、みなさまのご来場を心よりお待ちしております。
+                    <br>
+                    <br>
+                    <span class="rs">
+                        早稲田祭2017運営スタッフ 代表
+                        <br> 文学部3年 高田あすか</span>
+                    <img src="design/images/takada.jpg" alt="高田あすか" width="100%">
+                    <br>
+                    <span class="rs">
+                        <a class="emlink" href="http://www.wasedasai.net/">早稲田祭公式サイトはこちら</a>
+                    </span>
+                </p>
+            </div>
+            <div class="ctcontent">
+                <h2 id="about">
+                    <span>概要</span>
+                </h2>
+                <h3 class="sp-h3">受験生応援イベント Open Campus 2017 Project</h3>
+                <p class="text text2">
+                    <img src="design/images/about.jpg" alt="概要" width="100%">
+                    <strong>主催</strong>
+                    <br> 早稲田祭2017運営スタッフ
+                    <br>
+                    <strong>日程</strong>
+                    <br> 2017年8月5日(土)、6日(日)
+                    <br>
+                    <strong>時間</strong>
+                    <br> 9:00〜17:00
+                    <br>
+                    <strong>場所</strong>
+                    <br> 早稲田大学 早稲田キャンパス 10号館 　 </p>
+            </div>
+            <div class="ctcontent">
+                <h2 id="access">
+                    <span>アクセス</span>
+                </h2>
+                <h3 class="sp-h3">早稲田大学 早稲田キャンパス 10号館</h3>
+                <p class="text">
+                    <a href="design/images/ocmap.png">
+                        <img src="design/images/ocmap.png" width="100%" alt="早稲田キャンパス 地図">
+                    </a>
+                    <br> ※クリックで拡大
+                </p>
+                <h3>交通機関によるアクセス</h3>
+                <p class="text">
+                    JR山手線 高田馬場駅から徒歩20分
+                    <br> 西武新宿線 高田馬場駅から徒歩20分
+                    <br> 東京メトロ東西線 早稲田駅から徒歩5分
+                    <br> 東京メトロ副都心線 西早稲田駅から徒歩17分
+                    <br> 都電荒川線 早稲田駅から徒歩5分
+                    <br> 都営バス 早大正門・早稲田停留所
+                    <br>
+                </p>
+            </div>
+        </div>
+    </div>
+    <p class="pagetop">
+        <a href="#header">▲</a>
+    </p>
+    <footer class="footer">
+        <div class="copyright">
+            <small>Copyright &copy; 2017 WASEDASAI2017 Staff All Rights Reserved.</small>
+        </div>
+        <div class="scbtn">
+            <ul>
+                <li>
+                    <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://wasedasai.net/oc/" data-via="wasedasai"
+                        data-hashtags="早稲田祭2017">Tweet</a>
+                    <script>!function (d, s, id) { var js, fjs = d.getElementsByTagName(s)[0], p = /^http:/.test(d.location) ? 'http' : 'https'; if (!d.getElementById(id)) { js = d.createElement(s); js.id = id; js.src = p + '://platform.twitter.com/widgets.js'; fjs.parentNode.insertBefore(js, fjs); } }(document, 'script', 'twitter-wjs');</script>
+                </li>
+            </ul>
+        </div>
+        <div class="ftsbtn clearfix">
+            <ul>
+                <li>
+                    <a href="https://twitter.com/wasedasai">
+                        <img src="design/images/social/twitter.png" height="28" width="28">
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.facebook.com/Wasedasai">
+                        <img src="design/images/social/facebook.png" height="28" width="28">
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.youtube.com/WasedasaiOfficial">
+                        <img src="design/images/social/youtube.png" height="28" width="28">
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </footer>
+    <script type="text/javascript" src="design/scripts/jquery-1.11.1.min.js"></script>
+    <script src="design/scripts/jquery.meanmenu.js"></script>
+    <script src="design/scripts/fakeLoader.min.js"></script>
+    <script>
+        $("#fakeLoader").fakeLoader({
+            timeToHide: 1200, //Time in milliseconds for fakeLoader disappear
+            zIndex: 10000, // Default zIndex
+            // spinner:"spinner2",//Options: 'spinner1', 'spinner2', 'spinner3', 'spinner4', 'spinner5', 'spinner6', 'spinner7'
+            bgColor: "#b00f16", //Hex, RGB or RGBA colors
+            imagePath: "design/images/loader.gif" //If you want can you insert your custom image
+        });
+    </script>
+    <script>
+        $(document).ready(function () {
+            $('nav').meanmenu({
+                meanMenuClose: "×", // クローズボタン
+                meanMenuCloseSize: "18px", // クローズボタンのフォントサイズ
+                meanMenuOpen: "<span /><span /><span />", // 通常ボタン
+                meanRevealPosition: "right", // 表示位置
+                meanScreenWidth: "640", // 表示させるウィンドウサイズ(ブレイクポイント)
+            });
+        });
+    </script>
+    <script>
+        $(function () {
+            // #で始まるアンカーをクリックした場合に処理
+            $('a[href^=#]').click(function () {
+                // スクロールの速度
+                var speed = 400; // ミリ秒
+                // アンカーの値取得
+                var href = $(this).attr("href");
+                // 移動先を取得
+                var target = $(href == "#" || href == "" ? 'html' : href);
+                // 移動先を数値で取得
+                var position = target.offset().top;
+                // スムーススクロール
+                $('body,html').animate({ scrollTop: position }, speed, 'swing');
+                return false;
+            });
+        });
+    </script>
+    <script type="text/javascript" src="design/scripts/jquery.clingify.js"></script>
+    <script type="text/javascript">
+        $(function () {
+            $('.nav').clingify();
+        });
+    </script>
+    <script>
+        $(document).ready(function () {
+            var pagetop = $('.pagetop');
+            $(window).scroll(function () {
+                if ($(this).scrollTop() > 100) {
+                    pagetop.fadeIn();
+                } else {
+                    pagetop.fadeOut();
+                }
+            });
+            pagetop.click(function () {
+                $('body, html').animate({ scrollTop: 0 }, 500);
+                return false;
+            });
+        });
+    </script>
+</body>
+
+</html>
