--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html lang="ja">
 <head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# article: http://ogp.me/ns/article#">
 
-  <!-- Basic Page Needs
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <!-- Basic Page Information / OGP Settings -->
   <meta charset="utf-8">
   <title>早稲田祭2018運営スタッフ</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -17,38 +16,35 @@
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:site" content="@wasedasai">
 
-  <!-- Mobile Specific Metas
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <!-- Mobile Specific Metas -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <!-- FONT
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link href="//fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
+  <!-- Font -->
+  <script type="text/javascript" src="//typesquare.com/accessor/script/typesquare.js?wdc8KuLmOl8%3D" charset="utf-8"></script>
+  <link href="https://fonts.googleapis.com/earlyaccess/notosansjapanese.css" rel="stylesheet">
 
-  <!-- CSS
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <!-- CSS -->
   <link rel="stylesheet" href="design/stylesheets/normalize.css">
   <link rel="stylesheet" href="design/stylesheets/skeleton.css">
+  <link rel="stylesheet" href="design/stylesheets/design.css">
 
-  <!-- Favicon
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <!-- Favicon -->
   <link rel="icon" type="image/png" href="design/images/favicon.png">
 
 </head>
 <body>
+  <!-- Header -->
+  <header class="header">
+    <h1 class="logo"><a href="index.html"><img src="design/images/logo.svg" alt="早稲田祭2018運営スタッフ" width="280"></a></h1>
+    <ul class="nav">
+      <li><a href="aboutus.html">運スタについて</a></li>
+      <li><a href="festival.html">早稲田祭について</a></li>
+      <li><a href="whatwedo.html">活動内容</a></li>
+      <li><a href="contact.html">お問い合わせ</a></li>
+      <li><a href="links.html">リンク</a></li>
+    </ul>
+  </header>
 
-  <!-- Primary Page Layout
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <div class="container">
-    <div class="row">
-      <div class="one-half column" style="margin-top: 25%">
-        <h4>Basic Page</h4>
-        <p>This index.html page is a placeholder with the CSS, font and favicon. It's just waiting for you to add some content! If you need some help hit up the <a href="http://www.getskeleton.com">Skeleton documentation</a>.</p>
-      </div>
-    </div>
-  </div>
-
-<!-- End Document
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <!-- Scripts -->
 </body>
 </html>
