--- a/index.html
+++ b/index.html
@@ -35,14 +35,17 @@
 <body>
   <!-- Header -->
   <header class="header">
-    <h1 class="logo"><a href="index.html"><img src="design/images/logo.svg" alt="早稲田祭2018運営スタッフ" width="280"></a></h1>
-    <ul class="nav">
-      <li><a href="aboutus.html">運スタについて</a></li>
-      <li><a href="festival.html">早稲田祭について</a></li>
-      <li><a href="whatwedo.html">活動内容</a></li>
-      <li><a href="contact.html">お問い合わせ</a></li>
-      <li><a href="links.html">リンク</a></li>
-    </ul>
+    <!-- Nav -->
+    <nav class="nav">
+      <h1 class="logo"><a href="index.html"><img src="design/images/logo.svg" alt="早稲田祭2018運営スタッフ" width="280"></a></h1>
+      <ul>
+        <li><a href="aboutus.html">運スタについて</a></li>
+        <li><a href="festival.html">早稲田祭について</a></li>
+        <li><a href="whatwedo.html">活動内容</a></li>
+        <li><a href="contact.html">お問い合わせ</a></li>
+        <li><a href="links.html">リンク</a></li>
+      </ul>
+    </nav>
   </header>
 
   <!-- Scripts -->
