--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   <header class="header">
     <!-- Nav -->
     <nav class="nav">
-      <h1 class="logo"><a href="index.html"><img src="design/images/logo.svg" alt="早稲田祭2018運営スタッフ" width="460"></a></h1>
+      <h1><a href="index.html"><img src="design/images/logo.svg" alt="早稲田祭2018運営スタッフ"></a></h1>
       <ul>
         <li><a href="aboutus.html">運スタについて</a></li>
         <li><a href="festival.html">早稲田祭について</a></li>
@@ -46,7 +46,14 @@
         <li><a href="links.html">リンク</a></li>
       </ul>
     </nav>
+
+    <span class="scroll"></span>
   </header>
+
+  <div class="container">
+    <h2>Hello</h2>
+    <p></p>
+  </div>
 
   <!-- Scripts -->
 </body>
