--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!-- Font -->
-  <script type="text/javascript" src="//typesquare.com/accessor/script/typesquare.js?wdc8KuLmOl8%3D" charset="utf-8"></script>
   <link href="https://fonts.googleapis.com/earlyaccess/notosansjapanese.css" rel="stylesheet">
 
   <!-- CSS -->
@@ -36,14 +35,15 @@
   <!-- Header -->
   <header class="header">
     <!-- Nav -->
-    <nav class="nav">
+    <nav>
       <h1><a href="index.html"><img src="design/images/logo.svg" alt="早稲田祭2018運営スタッフ"></a></h1>
-      <ul>
+      <ul class="nav">
         <li><a href="aboutus.html">運スタについて</a></li>
         <li><a href="festival.html">早稲田祭について</a></li>
         <li><a href="whatwedo.html">活動内容</a></li>
         <li><a href="contact.html">お問い合わせ</a></li>
         <li><a href="links.html">リンク</a></li>
+        <li><a href="http://www.wasedasai.net/">早稲田祭公式サイト</a></li>
       </ul>
     </nav>
 
@@ -51,8 +51,37 @@
   </header>
 
   <div class="container">
-    <h2>Hello</h2>
-    <p></p>
+    <div class="row">
+      <div class="five columns">
+        <h3>このサイトについて</h3>
+      </div>
+      <div class="seven columns">
+        <p>このサイトは、早稲田祭運営スタッフ（運スタ）の公式サイトです。</p>
+        <p>早稲田祭の公式サイトでは、「早稲田祭」自体の情報を中心に発信しておりますが、こちらの「運スタ公式サイト」では、運スタという団体に焦点を当てて情報を発信します。</p>
+      </div>
+    </div>
+    <div class="row">
+      <div class="five columns">
+        <h3>運スタについて</h3>
+      </div>
+      <div class="seven columns">
+        <p>早稲田祭運営スタッフ（運スタ）は、早稲田大学早稲田キャンパス・戸山キャンパスを中心にした地域で行われる、日本最大級の学園祭「早稲田祭」を運営するサークルです。</p>
+        <p>このサイトでは、運スタの歴史、組織、憲章、決算や新歓などの情報をご提供します。</p>
+        <p class="moreLink"><a href="aboutus.html">MORE</a></p>
+      </div>
+    </div>
+    <div class="row">
+      <div class="five columns">
+        <h3>早稲田祭について</h3>
+      </div>
+      <div class="seven columns">
+        <p>早稲田祭は、早稲田大学早稲田キャンパス・戸山キャンパスを中心にした地域で行われる、来場者数18万人・460企画を誇る日本最大級の学園祭です。</p>
+        <p>このサイトでは、早稲田祭の歴史やデータなどの情報をご提供します。</p>
+        <p class="moreLink">
+          <a href="festival.html">MORE</a>
+        </p>
+      </div>
+    </div>
   </div>
 
   <!-- Scripts -->
