add button design

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 
   <!-- Font -->
   <link href="https://fonts.googleapis.com/earlyaccess/notosansjapanese.css" rel="stylesheet">
+  <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
 
   <!-- CSS -->
   <link rel="stylesheet" href="design/stylesheets/normalize.css">
@@ -50,6 +51,7 @@
     <span class="scroll"></span>
   </header>
 
+  <!-- Contents -->
   <div class="container">
     <div class="row">
       <div class="five columns">
@@ -67,7 +69,7 @@
       <div class="seven columns">
         <p>早稲田祭運営スタッフ（運スタ）は、早稲田大学早稲田キャンパス・戸山キャンパスを中心にした地域で行われる、日本最大級の学園祭「早稲田祭」を運営するサークルです。</p>
         <p>このサイトでは、運スタの歴史、組織、憲章、決算や新歓などの情報をご提供します。</p>
-        <p class="moreLink"><a href="aboutus.html">MORE</a></p>
+        <a class="moreLink" href="aboutus.html"><i class="fas fa-angle-right fa-fw"></i>MORE</a>
       </div>
     </div>
     <div class="row">
@@ -77,13 +79,14 @@
       <div class="seven columns">
         <p>早稲田祭は、早稲田大学早稲田キャンパス・戸山キャンパスを中心にした地域で行われる、来場者数18万人・460企画を誇る日本最大級の学園祭です。</p>
         <p>このサイトでは、早稲田祭の歴史やデータなどの情報をご提供します。</p>
-        <p class="moreLink">
-          <a href="festival.html">MORE</a>
-        </p>
+        <a class="moreLink" href="festival.html"><i class="fas fa-angle-right fa-fw"></i>MORE</a>
       </div>
     </div>
   </div>
 
-  <!-- Scripts -->
+  <!--Footer -->
+  <footer>
+    <small>Copyright &copy; 2018 Wasedasai Management Staff All Rights Reserved.</small>
+  </footer>
 </body>
 </html>
