--- a/index.html
+++ b/index.html
@@ -86,7 +86,57 @@
 
   <!--Footer -->
   <footer>
-    <small>Copyright &copy; 2018 Wasedasai Management Staff All Rights Reserved.</small>
+    <p class="copyright"><small>Copyright &copy; 2018 Wasedasai Management Staff All Rights Reserved.</small></p>
+    <div class="container">
+      <div class="row">
+        <div class="four columns">
+          <p>早稲田祭2018運営スタッフ</p>
+          <p>〒162-0052 東京都新宿区戸山1-24-1<br>
+            早稲田大学 学生会館E339</p>
+          <p>03-3207-0408</p>
+        </div>
+        <div class="four columns">
+          <ul>
+            <li><a href="aboutus.html">運スタについて</a>
+              <ul>
+                <li><a href="aboutus.html#charter">憲章</a></li>
+                <li><a href="aboutus.html#organization">組織</a></li>
+                <li><a href="aboutus.html#history">沿革</a></li>
+              </ul>
+            </li>
+            <li><a href="festival.html">早稲田祭について</a>
+              <ul>
+                <li><a href="festival.html#about">概要</a></li>
+                <li><a href="festival.html#history">歴史</a></li>
+              </ul>
+            </li>
+          </ul>
+        </div>
+        <div class="four columns">
+          <ul>
+            <li>
+              <a href="whatwedo.html">活動内容</a>
+              <ul>
+                <li>
+                  <a href="whatwedo.html#departments">部局紹介</a>
+                </li>
+                <li>
+                  <a href="whatwedo.html#pj">プロジェクト</a>
+                </li>
+                <li>
+                  <a href="whatwedo.html#clubs">部活動</a>
+                </li>
+                <li>
+                  <a href="whatwedo.html#contribution">地域貢献</a>
+                </li>
+              </ul>
+            </li>
+            <li><a href="contact.html">お問い合わせ</a></li>
+            <li><a href="links.html">リンク</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
   </footer>
 </body>
 </html>
