--- a/aboutus.html
+++ b/aboutus.html
@@ -4,7 +4,7 @@
 
   <!-- Basic Page Information / OGP Settings -->
   <meta charset="utf-8">
-  <title>早稲田祭2018運営スタッフ</title>
+  <title>運スタについて - 早稲田祭2018運営スタッフ</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta property="og:title" content="早稲田祭2018運営スタッフ">
   <meta property="og:type" content="website">
@@ -33,33 +33,52 @@
 
 </head>
 <body>
-  <!-- Header -->
-  <header class="header">
-    <!-- Nav -->
-    <nav>
-      <h1><a href="index.html"><img src="design/images/logo.svg" alt="早稲田祭2018運営スタッフ"></a></h1>
-      <ul class="nav">
-        <li><a href="aboutus.html">運スタについて</a></li>
-        <li><a href="festival.html">早稲田祭について</a></li>
-        <li><a href="whatwedo.html">活動内容</a></li>
-        <li><a href="contact.html">お問い合わせ</a></li>
-        <li><a href="links.html">リンク</a></li>
-        <li><a href="http://www.wasedasai.net/">早稲田祭公式サイト</a></li>
-      </ul>
-    </nav>
-
-    <span class="scroll"></span>
-  </header>
+  <!-- Nav -->
+  <nav>
+    <h1><a href="index.html"><img src="design/images/logo.svg" alt="早稲田祭2018運営スタッフ"></a></h1>
+    <ul class="nav">
+      <li><a href="aboutus.html">運スタについて</a></li>
+      <li><a href="festival.html">早稲田祭について</a></li>
+      <li><a href="whatwedo.html">活動内容</a></li>
+      <li><a href="contact.html">お問い合わせ</a></li>
+      <li><a href="links.html">リンク</a></li>
+      <li><a href="http://www.wasedasai.net/">早稲田祭公式サイト</a></li>
+    </ul>
+  </nav>
 
   <!-- Contents -->
   <div class="container">
     <div class="row">
       <div class="five columns">
-        <h3>このサイトについて</h3>
+        <h3>運スタについて</h3>
       </div>
       <div class="seven columns">
-        <p>このサイトは、早稲田祭運営スタッフ（運スタ）の公式サイトです。</p>
-        <p>早稲田祭の公式サイトでは、「早稲田祭」自体の情報を中心に発信しておりますが、こちらの「運スタ公式サイト」では、運スタという団体に焦点を当てて情報を発信します。</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut volutpat magna sit amet lectus vulputate placerat. Morbi pellentesque
+        eros et dolor eleifend, vel posuere ligula porttitor. Proin imperdiet augue at sem pellentesque, in maximus sem viverra.
+        Mauris dolor tortor, eleifend quis tortor in, pellentesque gravida elit. Duis pharetra eros at nisi commodo hendrerit. Donec
+        non nunc scelerisque, mattis ligula sit amet, rhoncus mauris. Cras volutpat mauris id ultricies malesuada. Vivamus malesuada
+        ornare mi, in porta risus interdum eu. Vestibulum libero lorem, viverra sit amet rhoncus sed, placerat sit amet ante. Phasellus
+        accumsan sit amet ex id pulvinar. In a sodales sem, vel pulvinar erat. Curabitur porta, nibh ac faucibus cursus, arcu dui
+        vestibulum sapien, ac auctor sapien purus vel mauris. Pellentesque habitant morbi tristique senectus et netus et malesuada
+        fames ac turpis egestas. Vivamus tempor, nibh eget scelerisque faucibus, lorem sapien dictum risus, eget rhoncus velit nulla
+        a tellus. Vivamus ac interdum orci. Curabitur interdum lacinia metus, eget scelerisque ex elementum sit amet. Curabitur nec
+        nunc suscipit risus fermentum tincidunt sed sed justo. Integer quis purus non risus aliquet commodo quis ut massa. Fusce
+        in dolor euismod quam dignissim efficitur. Ut ac velit sed risus volutpat tincidunt. Vivamus quis mauris mauris. Sed et orci
+        id ipsum pharetra vehicula. Mauris ac nulla dapibus velit cursus ultricies. Nullam quis tristique urna. Etiam quis nisi ultrices
+        tellus facilisis posuere non in urna. Donec non sem eget magna mollis lacinia. Aenean posuere ligula ipsum. Nullam venenatis
+        ante ut molestie suscipit. In tellus lorem, efficitur vitae nibh vitae, tincidunt dictum lorem. Ut eu enim in nulla malesuada
+        congue vel in ante. Nulla tempor facilisis diam vel consectetur. Quisque leo nisl, aliquet fringilla diam at, eleifend interdum
+        tortor. Proin maximus, ante nec lacinia convallis, eros nunc consectetur felis, feugiat interdum ipsum leo sit amet ante.
+        Maecenas consectetur neque diam, eget ornare nunc posuere id. Integer malesuada ante sed magna malesuada interdum. Pellentesque
+        quis dolor dictum, ultrices orci nec, efficitur lectus. Donec vitae tempor urna. Etiam feugiat purus ligula, ac vehicula
+        ante posuere in. Vestibulum nibh eros, feugiat id dolor sit amet, porttitor fringilla ex. Curabitur ac condimentum eros.
+        Morbi feugiat accumsan lectus mattis iaculis. Fusce et augue aliquam, elementum lacus suscipit, rutrum magna. Mauris lobortis
+        sagittis lectus, at hendrerit arcu aliquet ut. Vivamus eget vehicula ligula. Curabitur ut viverra nisl. Quisque in augue
+        vel magna aliquam blandit. Donec sit amet risus auctor, aliquet erat ac, elementum elit. Pellentesque accumsan in lorem non
+        posuere. Praesent tincidunt neque ligula, ac porttitor urna consectetur non. Integer vitae metus non lorem eleifend consectetur.
+        Interdum et malesuada fames ac ante ipsum primis in faucibus. Nunc vitae quam id libero tristique condimentum sit amet vitae
+        nibh. Etiam id risus finibus, ornare lectus id, suscipit turpis. Curabitur eget dui sed dui cursus suscipit. Proin non dui
+        a metus tincidunt pulvinar eleifend nec dolor. Nunc urna justo, facilisis eget dapibus a, condimentum quis libero.</p>
       </div>
     </div>
     <div class="row">
@@ -101,7 +120,6 @@
               <ul>
                 <li><a href="aboutus.html#charter">憲章</a></li>
                 <li><a href="aboutus.html#organization">組織</a></li>
-                <li><a href="aboutus.html#accounts">会計</a></li>
                 <li><a href="aboutus.html#history">沿革</a></li>
               </ul>
             </li>
