--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
   <meta property="fb:app_id" content="appid">
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:site" content="@wasedasai">
+  <meta name="robots" content"noindex, nofollow">
+
 
   <!-- Mobile Specific Metas -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -101,7 +103,7 @@
               <ul>
                 <li><a href="aboutus.html#charter">憲章</a></li>
                 <li><a href="aboutus.html#organization">組織</a></li>
-                <li><a href="aboutus.html#accounts">会計</a></li>
+                <li><a href="aboutus.html#accounts">会計 </a></li>
                 <li><a href="aboutus.html#history">沿革</a></li>
               </ul>
             </li>
@@ -129,6 +131,9 @@
                 </li>
                 <li>
                   <a href="whatwedo.html#contribution">地域貢献</a>
+                </li>
+                <li>
+                  <a href="whatwedo.html#alumni">校友との関わり</a>
                 </li>
               </ul>
             </li>
